[tool.poetry]
name = "trading"
version = "0.1.0"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyfuncify = {git = "https://github.com/wildfauve/pyfuncify.git", rev = "main"}
pynamodb = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
